# opacity-android

./: .gitignore  README.md  jitpack.yml  settings.gradle.kts
OpacityCore/: build.gradle  consumer-rules.pro  proguard-rules.pro  settings.gradle.kts
OpacityCore/src/androidTest/java/com/opacitylabs/opacitycore/: ExampleInstrumentedTest.kt
OpacityCore/src/main/assets/extension/: background.js  content.js  manifest.json
OpacityCore/src/main/assets/interceptExtension/: background.js  content.js  manifest.json
OpacityCore/src/main/cpp/: CMakeLists.txt  OpacityCore.cpp
OpacityCore/src/main/java/com/opacitylabs/opacitycore/: CryptoManager.kt  InAppBrowserActivity.kt  JsonUtils.kt  OpacityCore.kt
OpacityCore/src/main/jni/include/: opacity.h  sdk.h
OpacityCore/src/main/kotlin/com/opacitylabs/opacitycore/: BaseBrowserActivity.kt  GeckoViewBrowserActivity.kt  InAppBrowserActivity.kt  JsonToAnyConverter.kt  OpacityCore.kt  WebViewBrowserActivity.kt
OpacityCore/src/test/java/com/opacitylabs/opacitycore/: ExampleUnitTest.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/: BaseUITest.kt  UITests.kt
app/src/androidTest/java/com/opacitylabs/opacitycoreexample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/opacitylabs/opacitycoreexample/: GithubProfileWorker.kt  MainActivity.kt
app/src/main/java/com/opacitylabs/opacitycoreexample/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/opacitylabs/opacitycoreexample/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
